fixing spacing on home page

--- a/src/css/pages/home.scss
+++ b/src/css/pages/home.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     transition: all ease 0.5s;
-    padding-top: 20px;
+    overflow-x: hidden;
 }
 
 .player-data{
@@ -110,6 +110,10 @@
     .rank-value {
         font-size: 10pt;
     }
+}
+
+.individual{
+    margin: 30px 0px !important;
 }
 
 .player-wrapper{
